hphp/hack/test/typecheck/fake_members3.php.exp
File "fake_members3.php", line 22, characters 12-16:
Invalid return type (Typing[4110])
File "fake_members3.php", line 17, characters 27-29:
This is an int
File "fake_members3.php", line 15, characters 18-21:
It is incompatible with a nullable type
File "fake_members3.php", line 21, characters 5-18:
All the local information about X::$x has been invalidated during this call.
This is a limitation of the type-checker, use a local if that's the problem.
